--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,202 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Roboto, sans-serif;
+
+  --font-blue: #00acdc;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 50px;
+}
+
+.nav__list {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.logo__img {
+  width: 40px;
+  height: 40px;
+}
+
+.nav__item {
+  display: flex;
+}
+
+.nav__link {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #060b35;
+  font-weight: 500;
+  align-items: center;
+  height: 60px;
+  display: flex;
+}
+
+.nav__item:not(:first-child) {
+  margin-left: 20px;
+}
+
+.nav__link:hover {
+  color: var(--font-blue);
+}
+
+.is-active {
+  color: var(--font-blue);
+  position: relative;
+}
+
+.nav__link.is-active::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 4px;
+  width: 100%;
+  border-radius: 8px;
+  background-color: var(--font-blue);
+}
+
+.catalog {
+  display: grid;
+  grid-template-columns: repeat(1, 200px);
+  gap: 46px 48px;
+  padding: 0 50px;
+  margin-top: 54px;
+  justify-content: center;
+}
+
+.card {
+  box-sizing: border-box;
+  border: 1px solid #f3f3f3;
+  border-radius: 5px;
+  width: 200px;
+  padding: 32px 16px 16px;
+  transition:
+    background-color 0.3s,
+    color 0.3s,
+    border 0.3s,
+    scale 0.3s;
+  &:hover {
+    scale: 1.2;
+  }
+}
+
+.card__img {
+  width: 160px;
+  height: 134px;
+  margin: 0 auto 40px;
+  display: block;
+}
+
+.card__title {
+  font-size: 12px;
+  font-weight: 500;
+  padding-bottom: 4px;
+  line-height: 18px;
+
+  &:hover {
+    color: #34568b;
+  }
+}
+
+.card__code {
+  font-size: 10px;
+  color: #616070;
+  padding-bottom: 16px;
+}
+
+.card__review {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 24px;
+}
+
+.card__stars {
+  display: flex;
+}
+
+.card__review-text {
+  font-size: 10px;
+}
+
+.card__star {
+  width: 16px;
+  height: 16px;
+  background-image: url(../images/star.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.card__star:not(:last-child) {
+  margin-right: 4px;
+}
+
+.card__stars--1 :first-child,
+.card__stars--2 :nth-child(-n + 2),
+.card__stars--3 :nth-child(-n + 3),
+.card__stars--4 :nth-child(-n + 4),
+.card__stars--5 :nth-child(-n + 5) {
+  background-image: url(../images/star-active.svg);
+}
+
+.card__price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 16px;
+}
+
+.card__price_label {
+  font-size: 12px;
+  color: #616070;
+}
+
+.card__price_amount {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.card__button {
+  width: 100%;
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
+  background-color: #00acdc;
+  border: none;
+  padding: 12px 70px;
+  border-radius: 5px;
+  font-size: 14px;
+  text-align: center;
+}
+
+@media screen and (min-width: 488px) {
+  .catalog {
+    grid-template-columns: repeat(2, 200px);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .catalog {
+    grid-template-columns: repeat(3, 200px);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .catalog {
+    grid-template-columns: repeat(4, 200px);
+  }
 }
